fixed spacing of elements for mobile and web need to fix animated text extra spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,64 @@
-.main-page {
-  position: relative;
-  background-color: var(--diablitoons-neutral-200);
+.App {
+  text-align: center;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  position: absolute;
+  overflow: visible;
+  margin: 0;
+  padding: 0;
+}
+
+
+.divHeader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: normal;
+  justify-content: flex-start;
+  z-index: 2;
+}
+
+/* var(--diablitoons-neutral-200);
+ */
+.main-page {
+  position: absolute;
+  background-color: red;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  /* set margin to 0 */
+  padding: 0;
+  /* set padding to 0 */
   font-size: var(--diablitoons-button-16-size);
   color: var(--diablitoons-neutral-700);
   font-family: var(--diablitoons-button-20);
+  top: 0;
+  left: 0;
 }
+
 
 .video {
   opacity: 1;
-  width: min-content;
-  height: min-content;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .videoHidden {
+  position: absolute;
+  top: 0;
+  left: 0;
   opacity: 0;
   display: none;
+  width: 100%;
+  height: 100%;
 }
 
 .textVisible {
@@ -35,8 +76,8 @@
   top: 0;
   left: 0;
   opacity: 0;
+  width: 100%;
+  height: 100%;
 }
 
-@media (max-width:850px) {
-  
-}
+@media (max-width:850px) {}
