--- a/src/components/animatedText/animatedText.css
+++ b/src/components/animatedText/animatedText.css
@@ -1,12 +1,11 @@
 main {
-  
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width: 100%;
-  height: 100vh;
-  
+  width: 100%;
+  height: 100%;
+
 }
 
 section {
@@ -49,7 +48,7 @@ section {
 
 }
 
-.cooking-text-1 {
+.cooking-text-start {
   position: relative;
   font-weight: 600;
   color: var(--diablitoons-primary-100);
@@ -81,7 +80,7 @@ section {
     text-align: center;
     width: 100%;
     height: 100%;
-  
+
   }
 
   .diablitoons-text-container {
@@ -105,7 +104,6 @@ section {
     justify-content: center;
     width: 100%;
     height: 100%;
-
   }
 
   .diablitoons-text-start {
@@ -113,23 +111,18 @@ section {
     font-weight: 600;
     color: var(--color-black);
     padding: 1rem;
-
-
   }
 
-  .cooking-text-1 {
+  .cooking-text-start {
     position: relative;
     font-weight: 600;
     color: var(--diablitoons-primary-100);
     padding: 1rem;
-   
-
   }
 
   .mezcal1 {
     position: relative;
     font-weight: 600;
-   
     color: var(--diablitoons-primary-100);
     padding: 1rem;
     text-align: left;
@@ -138,9 +131,7 @@ section {
   .cooking-text {
     position: relative;
     font-weight: 600;
-    
     color: var(--color-black);
     padding: 1rem;
-
   }
 }
