--- a/src/components/navbar/toonNavbar.css
+++ b/src/components/navbar/toonNavbar.css
@@ -25,9 +25,11 @@
 
 header {
     border-style: solid;
-   border-width: 0px 0px 1px 0px;
-   border-color: black;
-    padding: 0.5rem;
+    border-width: 0px 0px 1px 0px;
+    border-color: black;
+    height: 100%;
+    width: 100%;
+    background-color: blue;
 }
 
 .nav-container {
@@ -124,15 +126,15 @@ header {
 
     .nav-container {
         flex-direction: column;
-        max-width: 100%;
+        width: 100%;
         height: 100%;
         align-items: center;
         justify-content: center;
+        padding: 0;
     }
 
     .menu-row {
         flex-direction: row;
-        padding: var(--padding-sm);
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -151,26 +153,21 @@ header {
         position: relative;
         display: flex;
         padding-right: 1rem;
-        cursor: pointer;  
+        cursor: pointer;
         align-items: center;
         justify-content: center;
         cursor: pointer;
         padding: 0.5rem;
     }
-   
+
 
     .menu-icon {
+        padding-right: 1rem;
+        display: flex;
         width: 1.5rem;
         height: 1.5rem;
     }
 
-    .nav-group {
-        display: none;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: var(--gap-sm);
-    }
 
     .nav-main {
         display: none;
@@ -181,6 +178,15 @@ header {
         align-items: center;
         justify-content: center;
     }
+
+    .nav-group {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: var(--gap-sm);
+    }
+
     .nav-text {
         display: none;
         flex-direction: column;
@@ -237,7 +243,7 @@ header {
         align-items: center;
         justify-content: center;
     }
-    
+
     .nav-group-panel {
         display: flex;
         flex-direction: column;
